--- a/Watch Football/style1.css
+++ b/Watch Football/style1.css
@@ -110,6 +110,14 @@ body {
 
 .three {
     padding: 5% 40%;
+    box-shadow: inset 0 0 0 0 yellow;
+    color: white;
+    background-color: rgb(97, 20, 220);
+}
+
+.three:hover {
+    box-shadow: inset 250px 0 0 0 yellow;
+    color: black;
 }
 
 /* Blog Section */
