--- a/Watch Football/style1.css
+++ b/Watch Football/style1.css
@@ -49,15 +49,51 @@ body {
     background-color: crimson;
     padding: 10px 15px;
     border-radius: 5px;
-    box-shadow: inset 0 0 0 0 yellow;
+    box-shadow: inset 0 0 0 0 rgb(0, 174, 255);
     transition: ease-in .5s;
     outline: none;
 }
 
 .button:hover {
-    box-shadow: inset 200px 0 0 0 yellow;
+    box-shadow: inset 200px 0 0 0 rgb(0, 174, 255);
     cursor: pointer;
     color: black;
+}
+
+/* Button Animation */
+.animation {
+    text-decoration: none;
+    color: aliceblue;
+    border: 2px solid crimson;
+    padding: 10px 15px;
+    border-radius: 5px;
+    position: relative;
+    z-index: 1;
+}
+
+.animation:hover {
+    cursor: pointer;
+    color: white;
+}
+
+.animation::before {
+    transition: 0.5s all ease;
+    position: absolute;
+    top: 0;
+    left: 50%;
+    right: 50%;
+    bottom: 0;
+    opacity: 0;
+    content: "";
+    background-color: crimson;
+}
+
+.animation:hover::before {
+    transition: 0.5s all ease;
+    left: 0;
+    right: 0;
+    opacity: 1;
+    z-index: -1;
 }
 
 /* Menu Section */
@@ -237,7 +273,7 @@ Media Queries
 
     .header-image img {
         margin: 0;
-        width: 133%;
+        width: 131.5%;
         padding-left: 50%;
     }
 
