--- a/Watch Football/style1.css
+++ b/Watch Football/style1.css
@@ -1,3 +1,6 @@
+/*-------------- 
+Body section
+----------------*/
 body {
     font-family: 'Roboto Condensed', sans-serif;
     margin: 0;
@@ -7,7 +10,9 @@ body {
     margin: 5% 15%;
 }
 
-/* Header Section */
+/*-------------- 
+Header Section 
+----------------*/
 .container1 {
     background-color: #161616;
     border-radius: 30px;
@@ -60,7 +65,9 @@ body {
     color: black;
 }
 
-/* Button Animation */
+/*-----------------
+ Button Animation
+ ------------------*/
 .animation {
     text-decoration: none;
     color: aliceblue;
@@ -96,7 +103,9 @@ body {
     z-index: -1;
 }
 
-/* Menu Section */
+/*------------
+ Menu Section 
+ -------------*/
 
 .container2 {
     margin-top: 13%;
@@ -155,7 +164,9 @@ body {
     color: black;
 }
 
-/* Blog Section */
+/*---------------
+ Blog Section 
+ ----------------*/
 .blog-section {
     margin-left: 2.4%;
 }
@@ -195,14 +206,18 @@ body {
     padding-right: 15px;
 }
 
-/* Special Button */
+/*---------------
+ Special Button 
+ ----------------*/
 .special {
     padding-left: 45%;
     padding-bottom: 10%;
     visibility: hidden;
 }
 
-/* Footer Section */
+/*--------------
+ Footer Section 
+ ---------------*/
 
 footer {
     background-color: #161616;
@@ -242,10 +257,14 @@ Media Queries
 --------------*/
 
 
-/* Mobile devices */
+/*--------------
+ Mobile devices 
+ ---------------*/
 @media only screen and (max-width: 668px) {
 
-    /* Header Section */
+    /*--------------
+     Header Section 
+     ---------------*/
     .main-body {
         margin: 2%;
     }
@@ -277,7 +296,9 @@ Media Queries
         padding-left: 50%;
     }
 
-    /* Menu and Blog Section */
+    /*------------------------
+     Menu and Blog Section 
+     -------------------------*/
     .menu-section,
     .container2 {
         flex-direction: column;
@@ -293,7 +314,9 @@ Media Queries
 
     }
 
-    /* Footer Section */
+    /*---------------
+     Footer Section 
+     ----------------*/
     .text {
         flex-direction: column;
         align-items: center;
@@ -304,10 +327,14 @@ Media Queries
     }
 }
 
-/* Tablet devices */
+/*-----------------
+ Tablet devices
+ ------------------*/
 @media only screen and (min-width: 669px) and (max-width: 992px) {
 
-    /* Header Section */
+    /*----------------
+    Header Section 
+    ------------------*/
     .main-body {
         margin: 5%;
     }
@@ -336,7 +363,9 @@ Media Queries
         width: 250%;
     }
 
-    /* Menu Button */
+    /*------------ 
+    Menu Button 
+    --------------*/
     .menu-section {
         height: 100%;
         width: 100%;
@@ -350,7 +379,9 @@ Media Queries
         display: inline-block;
     }
 
-    /* Blog Section */
+    /*-------------
+     Blog Section 
+     --------------*/
     .container2 {
         width: 100%;
         flex-direction: column;
@@ -364,12 +395,16 @@ Media Queries
         display: none;
     }
 
-    /* Special Button */
+    /*-------------
+     Special Button 
+     --------------*/
     .special {
         visibility: visible;
     }
 
-    /* Footer Section */
+    /*-----------------
+     Footer Section 
+     ------------------*/
     .text span {
         padding: 2%;
     }
